fix the backdrop filter on Safari

--- a/src/css/Videos.css
+++ b/src/css/Videos.css
@@ -72,7 +72,7 @@
   left: 0.25rem;
   right: 0.25rem;
   z-index: 4;
-  background-color: rgba(255, 255, 255, 0.01);
+  background-color: rgba(255, 255, 255, 0.05);
   background-image: repeating-linear-gradient(
       0deg,
       rgb(203, 196, 196) 0px,
@@ -89,6 +89,7 @@
     );
   mix-blend-mode: multiply;
   backdrop-filter: blur(30px) brightness(0.5) saturate(0.3);
+  -webkit-backdrop-filter: blur(30px) brightness(0.5) saturate(0.3);
 }
 
 .paper::after {
